--- a/HtmlTemplate/Contact.html
+++ b/HtmlTemplate/Contact.html
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="searchInput passengerSelect mar-b-2">
+                    <div class="searchInput passengerSelect m-b-2">
                         <div>
                             <span class="icon icon-man-white"></span>
                         </div>
