--- a/HtmlTemplate/SearchResult.html
+++ b/HtmlTemplate/SearchResult.html
@@ -96,6 +96,7 @@
             </div>
         </div>
 
+        <!-- BODY -->
         <div class="innerContent">
             <section class="innerSearch">
                 <div class="sMobile searchMobile clearfix">
@@ -147,7 +148,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="searchInput passengerSelect mar-b-2">
+                                <div class="searchInput passengerSelect m-b-2">
                                     <div>
                                         <span class="icon icon-man-white"></span>
                                     </div>
@@ -291,7 +292,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +329,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -407,7 +408,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -456,7 +457,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -505,7 +506,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -525,6 +526,7 @@
                 </div>
             </section>
         </div>
+        <!-- BODY -->
 
         <section class="subscribe">
             <div class="container clearfix">
@@ -611,7 +613,7 @@
                             <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
-                            <div class="pull-right mar-l-30">
+                            <div class="pull-right m-l-30">
                                 <ul class="horizontal social pull-right">
                                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -622,7 +624,7 @@
                             </div>
                             <div class="pull-right line hMobile">&nbsp;</div>
 
-                            <div class="pull-right mar-r-30 hMobile">
+                            <div class="pull-right m-r-30 hMobile">
                                 <span class="footerNumber">
                                     <span class="icon icon-phone"></span>0 (850) 123 45 67
                                 </span>
