--- a/HtmlTemplate/_master.html
+++ b/HtmlTemplate/_master.html
@@ -179,7 +179,7 @@
                             <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
-                            <div class="pull-right mar-l-30">
+                            <div class="pull-right m-l-30">
                                 <ul class="horizontal social pull-right">
                                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="pull-right line hMobile">&nbsp;</div>
 
-                            <div class="pull-right mar-r-30 hMobile">
+                            <div class="pull-right m-r-30 hMobile">
                                 <span class="footerNumber">
                                     <span class="icon icon-phone"></span>0 (850) 123 45 67
                                 </span>
