--- a/HtmlTemplate/index.html
+++ b/HtmlTemplate/index.html
@@ -95,6 +95,7 @@
             </div>
         </div>
 
+        <!-- BODY -->
         <div class="banner">
             <div class="container">
                 <div class="ticketBg ticketFilterArea">
@@ -136,7 +137,7 @@
                         </div>
                         <div class="w-100"></div>
                         <div class="col mobileFull">
-                            <div class="searchInput passengerSelect mar-b-2">
+                            <div class="searchInput passengerSelect m-b-2">
                                 <span class="icon icon-man"></span>
                                 <span class="title">PASSENGERS</span>
                                 <input class="input" type="text" name="" placeholder="Select" />
@@ -510,6 +511,7 @@
                 </div>
             </section>
         </div>
+        <!-- BODY -->
 
         <section class="subscribe">
             <div class="container clearfix">
@@ -594,7 +596,7 @@
                             <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
-                            <div class="pull-right mar-l-30">
+                            <div class="pull-right m-l-30">
                                 <ul class="horizontal social pull-right">
                                     <li><a href="javascript:;"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="javascript:;"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -605,7 +607,7 @@
                             </div>
                             <div class="pull-right line hMobile">&nbsp;</div>
 
-                            <div class="pull-right mar-r-30 hMobile">
+                            <div class="pull-right m-r-30 hMobile">
                                 <span class="footerNumber">
                                     <span class="icon icon-phone"></span>0 (850) 123 45 67
                                 </span>
