--- a/HtmlTemplate/_master.html
+++ b/HtmlTemplate/_master.html
@@ -17,8 +17,11 @@
     <meta name="author" content="humans.txt" />
     <title>Bilet Reyon</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link href="/assets/plugins/bootstrap.min.css" rel="stylesheet" />
-    <link href="/assets/plugins/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
+    <link href="/assets/css/layout.css" rel="stylesheet" />
 </head>
 <body>
     <div id="ticketVue">
@@ -93,6 +96,7 @@
         </div>
 
         <!-- BODY -->
+        <!-- BODY -->
 
         <section class="subscribe">
             <div class="container clearfix">
@@ -119,49 +123,47 @@
                     <div class="col-md-3">
                         <p class="title">Airline Companies</p>
                         <ul class="vertical">
-                            <li><a href="#">Pegasus</a></li>
-                            <li><a href="#">Turkish Airlines</a></li>
-                            <li><a href="#">Anadolujet</a></li>
-                            <li><a href="#">Atlasjet</a></li>
-                            <li><a href="#">Borajet</a></li>
+                            <li><a href="javascript:;">Pegasus</a></li>
+                            <li><a href="javascript:;">Turkish Airlines</a></li>
+                            <li><a href="javascript:;">Anadolujet</a></li>
+                            <li><a href="javascript:;">Atlasjet</a></li>
+                            <li><a href="javascript:;">Borajet</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">About Our Company</p>
                         <ul class="vertical">
-                            <li><a href="#">about Us</a></li>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">About Purchase</a></li>
-                            <li><a href="#">User Agreement</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="javascript:;">about Us</a></li>
+                            <li><a href="javascript:;">Our services</a></li>
+                            <li><a href="javascript:;">About Purchase</a></li>
+                            <li><a href="javascript:;">User Agreement</a></li>
+                            <li><a href="javascript:;">Contact us</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">Popular Cities</p>
                         <ul class="vertical city">
-                            <li><a href="#">İstanbul</a></li>
-                            <li><a href="#">Antalya</a></li>
-                            <li><a href="#">Ankara</a></li>
-                            <li><a href="#">Eskişehir</a></li>
-                            <li><a href="#">İzmir</a></li>
-                            <li><a href="#">Çanakkale</a></li>
-                            <li><a href="#">Barcelona</a></li>
-                            <li><a href="#">Madrid</a></li>
-                            <li><a href="#">Paris</a></li>
-                            <li><a href="#">California</a></li>
+                            <li><a href="javascript:;">Istanbul</a></li>
+                            <li><a href="javascript:;">Antalya</a></li>
+                            <li><a href="javascript:;">Ankara</a></li>
+                            <li><a href="javascript:;">İzmir</a></li>
+                            <li><a href="javascript:;">Barcelona</a></li>
+                            <li><a href="javascript:;">Madrid</a></li>
+                            <li><a href="javascript:;">Paris</a></li>
+                            <li><a href="javascript:;">California</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">Help &amp; Support</p>
                         <ul class="vertical">
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Confidentiality Agreement</a></li>
-                            <li><a href="#">After Sales Services</a></li>
-                            <li><a href="#">Service Agreement</a></li>
-                            <li><a href="#">Cancellation &amp; Refund Conditions</a></li>
+                            <li><a href="javascript:;">Terms of use</a></li>
+                            <li><a href="javascript:;">Confidentiality Agreement</a></li>
+                            <li><a href="javascript:;">After Sales Services</a></li>
+                            <li><a href="javascript:;">Service Agreement</a></li>
+                            <li><a href="javascript:;">Cancellation &amp; Refund Conditions</a></li>
                         </ul>
                         <hr />
                     </div>
@@ -169,7 +171,7 @@
             </div>
             <div class="clear">&nbsp;</div>
             <div class="footerBottom">
-                <a href="#" class="footerArrow">
+                <a href="javascript:;" class="footerArrow" id="scrollTop">
                     <span class="icon icon-longarrow"></span>
                 </a>
                 <div class="container">
@@ -181,11 +183,11 @@
                         <div class="col-md-6">
                             <div class="pull-right m-l-30">
                                 <ul class="horizontal social pull-right">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pull-right line hMobile">&nbsp;</div>
@@ -201,8 +203,9 @@
             </div>
         </footer>
     </div>
-    <script src="/assets/js/jquery-3.0.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
 </body>
 </html>
